--- a/xiaozhi_web/package.json
+++ b/xiaozhi_web/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@ricky0123/vad-web": "^0.0.29",
     "@supabase/supabase-js": "^2.58.0",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
@@ -56,6 +57,7 @@
     "mqtt": "^5.14.1",
     "next": "13.5.1",
     "next-themes": "^0.3.0",
+    "onnxruntime-web": "^1.17.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
