--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
   # 3) ESP32 Server（从 tour_backend 集成进来）
   tour_backend:
     image: ghcr.nju.edu.cn/xinnan-tech/xiaozhi-esp32-server:server_latest
-    container_name: xiaozhi-esp32-server
+    container_name: tour_backend
     restart: always
     security_opt:
       - seccomp:unconfined
@@ -78,7 +78,6 @@ services:
     restart: unless-stopped
     networks:
       - app-net
-    profiles: ["ui"]                 # 可选：仅在指定 profile 时启动
 
   # 5) 另一个 Next.js 前端（xiaozhi_web）
   xiaozhi_web:
@@ -96,7 +95,6 @@ services:
     restart: unless-stopped
     networks:
       - app-net
-    profiles: ["ui"]
 
 networks:
   app-net:
